[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/pixel-rpg-20.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/pixel-rpg-12.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 134.0
margin_top = 139.0
margin_right = 377.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "ADVENTURE PLAT 1"

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer"]
margin_right = 512.0
margin_bottom = 144.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="VSplitContainer"]
margin_top = 156.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/CenterContainer2"]
margin_left = 208.0
margin_top = 32.0
margin_right = 304.0
margin_bottom = 112.0
custom_constants/separation = 4

[node name="StartButton" type="Button" parent="VSplitContainer/CenterContainer2/VBoxContainer"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 24 )
custom_fonts/font = ExtResource( 2 )
text = "START"

[node name="OptionsButton" type="Button" parent="VSplitContainer/CenterContainer2/VBoxContainer"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 52.0
rect_min_size = Vector2( 96, 24 )
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VSplitContainer/CenterContainer2/VBoxContainer"]
margin_top = 56.0
margin_right = 96.0
margin_bottom = 80.0
rect_min_size = Vector2( 96, 24 )
custom_fonts/font = ExtResource( 2 )
text = "QUIT"
[connection signal="pressed" from="VSplitContainer/CenterContainer2/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VSplitContainer/CenterContainer2/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
